html validation and console error fix

--- a/about-us.html
+++ b/about-us.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <!----------------------- Start of Header ----------------------->
+  <!-- Start of Header -->
   <header>
     <div class="header-top">
       <div class="container-fluid">
@@ -124,9 +124,9 @@
       </div>
     </div>
   </header>
-  <!----------------------- End of Header ----------------------->
+  <!-- End of Header -->
 
-  <!----------------------- Start of Title & Breadcrumb ----------------------->
+  <!-- Start of Title & Breadcrumb -->
   <div class="title-breadcrumb">
     <div class="hero-section">
       <div class="hero-bg">
@@ -143,9 +143,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Title & Breadcrumb ----------------------->
+  <!-- End of Title & Breadcrumb -->
 
-  <!----------------------- Start of Promo ----------------------->
+  <!-- Start of Promo -->
   <div class="promo-variant-3">
     <div class="promo">
       <div class="container">
@@ -158,16 +158,16 @@
               <h3>Don't Wait For<br> anything. Buy it today!</h3>
               <h5>Do creative for your fashion website</h5>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrudexe rc itation ullamco laboris nisi ut aliquip ex ea com modo consequat. Duis aute irure.</p>
-              <a href="#"><button>Shop now</button></a>
+              <a href="#">Shop now</a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <!----------------------- End of Promo ----------------------->
+  <!-- End of Promo -->
 
-  <!----------------------- Start of Team ----------------------->
+  <!-- Start of Team -->
   <div class="team-section-v2">
     <div class="container">
       <div class="row">
@@ -248,9 +248,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Team ----------------------->
+  <!-- End of Team -->
   
-  <!----------------------- Start of Counter ----------------------->
+  <!-- Start of Counter -->
   <div class="counter-variant-4">
     <div class="counter-section">
       <div class="container">
@@ -287,9 +287,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Counter ----------------------->
+  <!-- End of Counter -->
 
-  <!----------------------- Start of Footer ----------------------->
+  <!-- Start of Footer -->
   <footer>
     <div class="footer-section">
       <div class="container">
@@ -365,10 +365,9 @@
       <p class="text-center">Copyright ©2018 Mugli. All Rights Reserved</p>
     </div>
   </footer>
-  <!----------------------- End of Footer ----------------------->
+  <!-- End of Footer -->
 
   <!-- js linked here -->
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/vendor/jquery-1.12.4.min.js"></script>
   <script src="js/vendor/isotope.pkgd.min.js"></script>
   <script src="js/vendor/popper.min.js"></script>
