--- a/shop.html
+++ b/shop.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en-us">
+<html class="no-js" lang="zxx">
 <head>
   <meta charset="utf-8">
   <title>Shop - PSD to HTML Practice</title>
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <!----------------------- Start of Header ----------------------->
+  <!-- Start of Header -->
   <header>
     <div class="header-top">
       <div class="container-fluid">
@@ -125,9 +125,9 @@
       </div>
     </div>
   </header>
-  <!----------------------- End of Header ----------------------->
+  <!-- End of Header -->
 
-  <!----------------------- Start of Title & Breadcrumb ----------------------->
+  <!-- Start of Title & Breadcrumb -->
   <div class="title-breadcrumb">
     <div class="hero-section">
       <div class="hero-bg">
@@ -144,9 +144,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Title & Breadcrumb ----------------------->
+  <!-- End of Title & Breadcrumb -->
 
-  <!----------------------- Start of Shop ----------------------->
+  <!-- Start of Shop -->
   <div class="shop">
     <div class="container">
       <div class="row product-sort">
@@ -324,9 +324,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Shop ----------------------->
+  <!-- End of Shop -->
 
-  <!----------------------- Start of Footer ----------------------->
+  <!-- Start of Footer -->
   <footer>
     <div class="footer-section">
       <div class="container">
@@ -402,10 +402,9 @@
       <p class="text-center">Copyright ©2018 Mugli. All Rights Reserved</p>
     </div>
   </footer>
-  <!----------------------- End of Footer ----------------------->
+  <!-- End of Footer -->
 
   <!-- js linked here -->
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/vendor/jquery-1.12.4.min.js"></script>
   <script src="js/vendor/isotope.pkgd.min.js"></script>
   <script src="js/vendor/popper.min.js"></script>
