--- a/careers.html
+++ b/careers.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en-us">
+<html class="no-js" lang="zxx">
 <head>
   <meta charset="utf-8">
   <title>Careers - PSD to HTML Practice</title>
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <!----------------------- Start of Header ----------------------->
+  <!-- Start of Header -->
   <header>
     <div class="header-top">
       <div class="container-fluid">
@@ -124,9 +124,9 @@
       </div>
     </div>
   </header>
-  <!----------------------- End of Header ----------------------->
+  <!-- End of Header -->
 
-  <!----------------------- Start of Title & Breadcrumb ----------------------->
+  <!-- Start of Title & Breadcrumb -->
   <div class="title-breadcrumb">
     <div class="hero-section">
       <div class="hero-bg">
@@ -143,9 +143,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Title & Breadcrumb ----------------------->
+  <!-- End of Title & Breadcrumb -->
 
-  <!----------------------- Start of Portfolio ----------------------->
+  <!-- Start of Portfolio -->
   <div class="careers-section">
     <div class="container">
       <div class="row text-center mb-5">
@@ -158,7 +158,7 @@
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis quidem facilis nostrum debitis!</p>
         </div>
         <div class="col-xl-4">
-          <div class="icon-ico rounded-circle mb-4"><i class="fa-solid fa-suitcase-medical"></i></i></div>
+          <div class="icon-ico rounded-circle mb-4"><i class="fa-solid fa-suitcase-medical"></i></div>
           <h3>Company Offsites</h3>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis quidem facilis nostrum debitis!</p>
         </div>
@@ -198,9 +198,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Portfolio ----------------------->
+  <!-- End of Portfolio -->
 
-  <!----------------------- Start of Counter ----------------------->
+  <!-- Start of Counter -->
   <div class="counter-variant-4 mb-4">
     <div class="counter-section">
       <div class="container">
@@ -237,9 +237,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Counter ----------------------->
+  <!-- End of Counter -->
 
-  <!----------------------- Start of Footer ----------------------->
+  <!-- Start of Footer -->
   <footer>
     <div class="footer-section">
       <div class="container">
@@ -315,10 +315,9 @@
       <p class="text-center">Copyright ©2018 Mugli. All Rights Reserved</p>
     </div>
   </footer>
-  <!----------------------- End of Footer ----------------------->
+  <!-- End of Footer -->
 
   <!-- js linked here -->
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/vendor/jquery-1.12.4.min.js"></script>
   <script src="js/vendor/isotope.pkgd.min.js"></script>
   <script src="js/vendor/popper.min.js"></script>
