--- a/index-3.html
+++ b/index-3.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en-us">
+<html class="no-js" lang="zxx">
 <head>
   <meta charset="utf-8">
   <title>PSD to HTML Practice</title>
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <!----------------------- Start of Header ----------------------->
+  <!-- Start of Header -->
   <header class="header-v3">
     <div class="header-top d-flex align-items-center">
       <div class="container">
@@ -51,6 +51,7 @@
                     <li><a href="#">Português</a></li>
                   </ul>
                 </li>
+              </ul>
           </div>
         </div>
       </div>
@@ -120,9 +121,9 @@
       </div>
     </div>
   </header>
-  <!----------------------- End of Header ----------------------->
+  <!-- End of Header -->
 
-  <!----------------------- Start of Hero Section ----------------------->
+  <!-- Start of Hero Section -->
   <div class="hero-sec-v3">
     <div class="hero-section">
       <div class="hero-bg d-flex align-items-center">
@@ -132,7 +133,7 @@
               <div class="hero-content text-center">
                 <span>We are startup business</span>
                 <h2>BUILDING WORLD TOGETHER</h2>
-                <a href="#"><button>purchase  theme</button></a>
+                <a href="#">purchase  theme</a>
               </div>
             </div>
           </div>
@@ -140,9 +141,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Hero Section ----------------------->
+  <!-- End of Hero Section -->
 
-  <!----------------------- Start of Services ----------------------->
+  <!-- Start of Services -->
   <div class="services-section">
     <div class="container">
       <div class="row">
@@ -169,9 +170,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Services ----------------------->
+  <!-- End of Services -->
 
-  <!----------------------- Start of Promo ----------------------->
+  <!-- Start of Promo -->
   <div class="promo-variant-3">
     <div class="promo">
       <div class="container">
@@ -184,16 +185,16 @@
               <h3>Don't Wait For<br> anything. Buy it today!</h3>
               <h5>Do creative for your fashion website</h5>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrudexe rc itation ullamco laboris nisi ut aliquip ex ea com modo consequat. Duis aute irure.</p>
-              <a href="#"><button>Shop now</button></a>
+              <a href="#">Shop now</a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <!----------------------- End of Promo ----------------------->
+  <!-- End of Promo -->
 
-  <!----------------------- Start of Portfolio ----------------------->
+  <!-- Start of Portfolio -->
   <div class="portfolio-variant-2">
     <div class="portfolio-section">
       <div class="container-full">
@@ -209,7 +210,7 @@
                 <li data-filter=".c4">BUILDING</li>
                 <li data-filter=".c5">INTERIOR</li>
                 <li data-filter=".c6">OFFICE</li>
-              </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -290,9 +291,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Portfolio ----------------------->
+  <!-- End of Portfolio -->
 
-  <!----------------------- Start of Team ----------------------->
+  <!-- Start of Team -->
   <div class="team-section">
     <div class="container">
       <div class="row">
@@ -390,9 +391,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Team ----------------------->
+  <!-- End of Team -->
 
-  <!----------------------- Start of Counter ----------------------->
+  <!-- Start of Counter -->
   <div class="counter-variant-3">
     <div class="counter-section">
       <div class="container">
@@ -429,9 +430,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Counter ----------------------->
+  <!-- End of Counter -->
 
-  <!----------------------- Start of Recent Posts ----------------------->
+  <!-- Start of Recent Posts -->
   <div class="blog-v3 recent-posts">
     <div class="container">
       <div class="row blog-slider">
@@ -482,9 +483,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Recent Posts ----------------------->
+  <!-- End of Recent Posts -->
 
-  <!----------------------- Start of Testimonial ----------------------->
+  <!-- Start of Testimonial -->
   <div class="testimonial-variant-3">
     <div class="container">
       <div class="row">
@@ -555,9 +556,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Testimonial ----------------------->
+  <!-- End of Testimonial -->
 
-  <!----------------------- Start of Footer ----------------------->
+  <!-- Start of Footer -->
   <footer class="footer-full-width">
     <div class="footer-section">
       <div class="container">
@@ -633,7 +634,7 @@
           <p class="text-center">Copyright ©2018 Mugli. All Rights Reserved</p>
     </div>
   </footer>
-  <!----------------------- End of Footer ----------------------->
+  <!-- End of Footer -->
 
   <!-- js linked here -->
   <script src="js/vendor/jquery-1.12.4.min.js"></script>
