--- a/work-details.html
+++ b/work-details.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en-us">
+<html class="no-js" lang="zxx">
 <head>
   <meta charset="utf-8">
   <title>Work Details - PSD to HTML Practice</title>
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <!----------------------- Start of Header ----------------------->
+  <!-- Start of Header -->
   <header>
     <div class="header-top">
       <div class="container-fluid">
@@ -124,9 +124,9 @@
       </div>
     </div>
   </header>
-  <!----------------------- End of Header ----------------------->
+  <!-- End of Header -->
 
-  <!----------------------- Start of Title & Breadcrumb ----------------------->
+  <!-- Start of Title & Breadcrumb -->
   <div class="title-breadcrumb">
     <div class="hero-section">
       <div class="hero-bg">
@@ -143,9 +143,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Title & Breadcrumb ----------------------->
+  <!-- End of Title & Breadcrumb -->
 
-  <!----------------------- Start of Work Details ----------------------->
+  <!-- Start of Work Details -->
   <div class="work-details">
     <div class="container">
       <div class="row work-details-upper">
@@ -178,9 +178,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Work Details ----------------------->
+  <!-- End of Work Details -->
 
-  <!----------------------- Start of Counter ----------------------->
+  <!-- Start of Counter -->
   <div class="counter-variant-4 mb-4">
     <div class="counter-section">
       <div class="container">
@@ -217,9 +217,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Counter ----------------------->
+  <!-- End of Counter -->
 
-  <!----------------------- Start of Footer ----------------------->
+  <!-- Start of Footer -->
   <footer>
     <div class="footer-section">
       <div class="container">
@@ -295,10 +295,9 @@
       <p class="text-center">Copyright ©2018 Mugli. All Rights Reserved</p>
     </div>
   </footer>
-  <!----------------------- End of Footer ----------------------->
+  <!-- End of Footer -->
 
   <!-- js linked here -->
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/vendor/jquery-1.12.4.min.js"></script>
   <script src="js/vendor/isotope.pkgd.min.js"></script>
   <script src="js/vendor/popper.min.js"></script>
