--- a/work.html
+++ b/work.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en-us">
+<html class="no-js" lang="zxx">
 <head>
   <meta charset="utf-8">
   <title>Work - PSD to HTML Practice</title>
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <!----------------------- Start of Header ----------------------->
+  <!-- Start of Header -->
   <header>
     <div class="header-top">
       <div class="container-fluid">
@@ -124,9 +124,9 @@
       </div>
     </div>
   </header>
-  <!----------------------- End of Header ----------------------->
+  <!-- End of Header -->
 
-  <!----------------------- Start of Title & Breadcrumb ----------------------->
+  <!-- Start of Title & Breadcrumb -->
   <div class="title-breadcrumb">
     <div class="hero-section">
       <div class="hero-bg">
@@ -143,9 +143,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Title & Breadcrumb ----------------------->
+  <!-- End of Title & Breadcrumb -->
 
-  <!----------------------- Start of Portfolio ----------------------->
+  <!-- Start of Portfolio -->
   <div class="portfolio-section mt-5">
     <div class="container">
       <div class="row">
@@ -160,7 +160,7 @@
               <li data-filter=".c4">BUILDING</li>
               <li data-filter=".c5">INTERIOR</li>
               <li data-filter=".c6">OFFICE</li>
-            </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -239,13 +239,13 @@
         </div>
       </div>
     <div class="col-xl-12 portfolio-button text-center">
-      <a href="work-details.html"><button>All Projects</button></a>
+      <a href="work-details.html">All Projects</a>
     </div>
     </div>
   </div>
-  <!----------------------- End of Portfolio ----------------------->
+  <!-- End of Portfolio -->
 
-  <!----------------------- Start of Counter ----------------------->
+  <!-- Start of Counter -->
   <div class="counter-variant-4 mb-4">
     <div class="counter-section">
       <div class="container">
@@ -282,9 +282,9 @@
       </div>
     </div>
   </div>
-  <!----------------------- End of Counter ----------------------->
+  <!-- End of Counter -->
 
-  <!----------------------- Start of Footer ----------------------->
+  <!-- Start of Footer -->
   <footer>
     <div class="footer-section">
       <div class="container">
@@ -360,7 +360,7 @@
       <p class="text-center">Copyright ©2018 Mugli. All Rights Reserved</p>
     </div>
   </footer>
-  <!----------------------- End of Footer ----------------------->
+  <!-- End of Footer -->
 
   <!-- js linked here -->
   <script src="js/vendor/jquery-1.12.4.min.js"></script>
